@@ -214,6 +214,10 @@ public final class RebaseAndCommit {
                 // file was committed good
                 provider.getTeamSettings().set(VERSION_PREFIX + path, newVersion);
             }
+            rebaser.reload(headRepoFile);
+        } else {
+            // no changes so just load.
+            rebaser.reload(headRepoFile);
         }
     }
 
@@ -264,6 +268,11 @@ public final class RebaseAndCommit {
          * user, i.e. can work up to some minutes.
          */
         void rebaseAndSave(File out) throws Exception;
+
+        /**
+         * Reload projectTMX from resulted TMX.
+         */
+        void reload(File file) throws Exception;
 
         /**
          * Construct commit message.
